# golden-abundance

./: .gitignore  CLAUDE.md  README.md  app.jsx  index.html  justfile
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
backend/alembic/versions/: 0008_drop_team_counter_cols.py  0009_task_color_format_check.py  b07d97980abc_reward_unique_user_task.py  c002_check_constraints.py  c004_fk_ondelete_cascade.py
backend/src/backend/: config.py  observability.py  rate_limit.py  seed.py  seed_reset.py  server.py
backend/src/backend/auth/: dependencies.py  jwt.py  supabase.py
backend/src/backend/contract/: README.md  __init__.py  auth.py  common.py  endpoints.md  leaderboard.py  news.py  rank.py  rewards.py  task.py  team.py  user.py  validate_examples.py
backend/src/backend/contract/examples/: interest_form_submit.json  me_profile_create_response.json  me_teams_response.json  news_list.json  profile_create.json  rewards_list.json  task_interest.json  task_team_challenge.json  team_as_leader.json  team_as_member.json  ticket_form_submit.json  user.json
backend/src/backend/db/: models.py
backend/src/backend/routers/: leaderboard.py  me.py  rank.py  tasks.py  teams.py
backend/src/backend/scripts/: dump_demo_accounts.py
backend/src/backend/services/: display_id.py  leaderboard.py  news.py  pagination.py  rank.py  reward.py  task.py  team.py  team_join.py  user.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_display_id.py  test_me.py  test_me_teams.py  test_observability.py  test_pagination.py  test_rank.py  test_rate_limit.py  test_seed.py  test_seed_demo.py  test_seed_display_id_drift.py  test_sentry_init.py  test_task_service.py  test_task_submit.py  test_team_approve_reject.py  test_team_join_endpoints.py  test_team_join_service.py  test_team_leave.py  test_team_service.py  test_teams_read.py  test_teams_update.py
backend/tests/auth/: test_supabase.py
backend/tests/db/: test_constraints.py
backend/tests/routers/: test_auth_required.py  test_health.py  test_leaderboard.py  test_me.py  test_me_profile.py  test_me_teams.py  test_news.py  test_rank.py  test_rewards_read.py  test_tasks_submit.py  test_teams_approve_reject.py  test_teams_join_requests.py  test_teams_read.py
backend/tests/services/: test_reward_service.py  test_task_service.py  test_team_join_service.py  test_team_service.py  test_user_service.py
docs/: phase-7-launch-runbook.md  production-launch-plan.md
docs/claude-design/: justfile  v1.html  v1.jsx
docs/functional-requirements/: 01-seed-data.md  02-db-schema.md  03-api-contract.md  04-frontend-derivations.md  05-roles-permissions.md  06-entity-rules.md  07-user-journeys.md  08-error-semantics.md  09-localization.md  10-deferred-scope.md  README.md
docs/superpowers/plans/: 2026-04-19-phase-5a-foundation.md  2026-04-19-phase-5b-auth.md  2026-04-19-phase-5c-teams.md  2026-04-19-phase-5d-content.md  2026-04-19-phase-5e-polish.md  2026-04-20-phase-4a-plumbing.md  2026-04-20-phase-4b-auth-read.md  2026-04-20-phase-4c-write-cleanup.md  2026-04-21-phase-6a-backend-auth.md  2026-04-21-phase-6b-frontend-auth.md  2026-04-21-phase-7a-deploy-foundation.md  2026-04-21-phase-7b-observability-launch.md
docs/superpowers/specs/: 2026-04-19-api-contract-design.md  2026-04-20-phase-3-routing-design.md  2026-04-21-phase-6-7-auth-deploy-design.md
frontend/: .env.example  .env.local.example  .prettierignore  README.md  index.html  justfile  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  data.ts  main.tsx  router.ts  types.ts  utils.ts
frontend/src/api/: auth.ts  client.ts  index.ts  me.ts  news.ts  rank.ts  tasks.ts  teams.ts
frontend/src/auth/: session.tsx  token.ts
frontend/src/dev/: demo-accounts.ts
frontend/src/hooks/: useCopyToClipboard.ts
frontend/src/lib/: supabase.ts
frontend/src/mutations/: me.ts  tasks.ts  teams.ts
frontend/src/queries/: keys.ts  me.ts  news.ts  rank.ts  tasks.ts  teams.ts
frontend/src/routes/: _authed.home.tsx  _authed.leaderboard.tsx  _authed.tasks.$taskId.start.tsx  _authed.tasks.$taskId.tsx  _authed.tasks.tsx  _authed.tsx  auth.callback.tsx  index.tsx  sign-in.tsx  welcome.tsx
frontend/src/screens/: GoogleAuthScreen.tsx  (+18 more)
(+39 files in other folders)
